--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-resumo/geopolitica/geopolitica.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-resumo/geopolitica/geopolitica.html
@@ -1,6 +1,4 @@
 <app-resumo 
   [markdownPath]="markdownPath"
-  [title]="title"
-  [pdfDownloadUrl]="pdfDownloadUrl"
-  [docxDownloadUrl]="docxDownloadUrl">
+  [title]="title">
 </app-resumo>
