--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -14,6 +14,14 @@
       <span class="title">CEMOS</span>
       <span class="subtitle">2028</span>
     </div>
+    <button 
+      mat-flat-button 
+      class="logout-button"
+      (click)="logout()"
+      aria-label="Fazer logout">
+      <mat-icon>logout</mat-icon>
+      <span>Sair</span>
+    </button>
   </header>
 
   <!-- Overlay quando menu está expandido -->
