--- a/frontend/src/app/pages/home/side-menu/side-menu.html
+++ b/frontend/src/app/pages/home/side-menu/side-menu.html
@@ -10,7 +10,8 @@
   </button>
 </div>
 
-<div class="header-container">
+<!-- Header - Escondido em modo tablet -->
+<div class="header-container" [class.tablet-mode]="isTopMenuMode">
   <span class="header-title">CEMOS</span>
   <span class="header-subtitle">2028</span>
 </div>
