--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
@@ -1,9 +1,12 @@
-<app-generic-bibliografia
-  [config]="bibliografiaConfig"
-  [assunto]="assunto"
-  [proposito]="proposito"
-  [materias]="materias"
-  [bibliografias]="bibliografias"
-  pdfUrl="/assets/docs/geopolitica.pdf"
-  wordUrl="/assets/docs/geopolitica.docx">
-</app-generic-bibliografia>
+<!-- Router Outlet para renderizar componentes filhos -->
+<!-- Quando a URL é /bibliografia -> mostra a capa -->
+<!-- Quando a URL é /bibliografia/vinganca-geografia -> mostra o livro -->
+<router-outlet></router-outlet>
+
+<!-- Capa da Bibliografia - Exibida SOMENTE quando não há filho ativo -->
+<app-capa-bibliografia
+  *ngIf="showCapa"
+  [imagePath]="imagePath"
+  [markdownPath]="markdownPath"
+  [basePath]="basePath">
+</app-capa-bibliografia>
