--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/vinganca-geografia/vinganca-geografia.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/vinganca-geografia/vinganca-geografia.html
@@ -1,6 +1,8 @@
-<div class="vinganca-geografia-container">
+<div>
   <app-livro-individual
     [contentPath]="contentPath"
-    [fileNames]="fileNames">
+    [fileNames]="fileNames"
+    [backRoute]="backRoute"
+    [backLabel]="backLabel">
   </app-livro-individual>
 </div>
