--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
@@ -6,7 +6,7 @@
 <!-- Capa da Bibliografia - Exibida SOMENTE quando não há filho ativo -->
 <app-capa-bibliografia
   *ngIf="showCapa"
-  [imagePath]="imagePath"
+  [capas]="capas"
   [markdownPath]="markdownPath"
   [basePath]="basePath">
 </app-capa-bibliografia>
